--- a/internetdefense/static/package.json
+++ b/internetdefense/static/package.json
@@ -2,14 +2,10 @@
     "name": "idl",
     "preferGlobal": "false",
     "version": "1.0.0",
-    "noAnalyze": true,
     "dependencies": {
-        "grunt-css" : "0.2.1"
-    },
-    "engine": {
-        "node": ">=0.4"
-    },
-    "scripts": {
-        "preinstall": "npm install -g grunt@0.3.9"
+        "grunt" : "*",
+        "grunt-contrib-mincss" : "*",
+        "grunt-contrib-uglify" : "*",
+        "grunt-contrib-watch" : "*"
     }
 }
